--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@
 }
 
 .side-nav{
-    background-color: rgba(204, 0, 255, 0.164);
+    background-color: khaki;
 }
 
 nav{
@@ -57,7 +57,7 @@ nav{
 
 .content-holder{
     margin-left: 10px;
-    background-color: rgb(190, 190, 184);
+    background-color: rgb(228, 228, 228);
     text-align: center;
 
 }
@@ -69,12 +69,15 @@ nav{
     margin-left: 20px;
     padding-bottom: 10px;
     margin-bottom: 40px;
+    box-shadow: 0 0 15px rgb(131, 130, 130);
 }
 
 .img-holder p{
     color: rgb(141, 141, 141);
-    font-size: 30px;
-    padding: 10px;
+    font-size: 40px;
+    margin: 0;
+    padding: 40px;
+    font-weight: bold;
 }
 
 .img-holder>img{
@@ -84,11 +87,19 @@ nav{
 
 
 .about-img{
-    height: 20%;
+    padding-bottom: 10px;
+    background-color: rgb(214, 214, 214);
+    border-radius: 10px;
+    opacity: 0.5;
+}
+
+.about-img:hover{
+    background-color: khaki;
+    border-radius: 10px;
 }
 
 .carousel-container{
-    background-color: aquamarine;
+    background-color: rgb(228, 228, 228);
     text-align: center;
     margin-left: 10px;
 }
@@ -100,5 +111,5 @@ nav{
 
 .page-footer{
     text-align: center;
-    margin-top: 40px;
+    margin-top: 20px;
 }
