--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
     box-sizing: border-box;
 }
 
-.container{
+.container, footer, .content-hr{
     margin-left: 5%;
     margin-right: 5%;
 }
@@ -14,6 +14,11 @@
 }
 
 .all-content{
+    display: flex;
+    flex-direction: column;
+}
+
+.main-content{
     display: flex;
     flex-direction: row;
 }
@@ -27,7 +32,10 @@
 }
 
 nav{
-    width: 10%;
+    position: fixed;
+    width: 4%;
+    top: 80px;
+    left: 20px;
 }
 
 .nav-items{
