--- a/index.css
+++ b/index.css
@@ -91,17 +91,26 @@ nav{
     box-shadow: 0 0 15px rgb(131, 130, 130);
 }
 
-.img-holder p{
-    color: rgb(141, 141, 141);
-    font-size: 40px;
-    margin: 0;
-    padding: 40px;
-    font-weight: bold;
-}
-
 .img-holder>img{
     width: 100%;
     text-align: center;
+}
+
+.catch-phrase ul{
+    padding: 10px;
+}
+
+.catch-phrase ul>li{
+    display: inline;
+    padding-right: 30px;
+    padding-left: 30px;
+    color: rgb(141, 141, 141);
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.with-border{
+    border-right: 2px solid rgb(199, 198, 198);
 }
 
 
@@ -189,6 +198,8 @@ nav{
 .about-me-descriptions{
     margin-top: 10px;
     width: 400%;
+    padding: 10px;
+    padding-right: 20px;
 }
 
 .content-two{
@@ -215,10 +226,6 @@ nav{
     color: rgb(141, 141, 141);
 }
 
-.about-me-descriptions{
-    padding: 10px;
-    padding-right: 20px;
-}
 
 .about-me-descriptions p, h2{
     color: rgb(100, 99, 99);
@@ -330,6 +337,185 @@ nav{
     height: max-content;
     border: 2px solid rgb(187, 187, 187);
     margin: 10px;
+}
+
+
+/* Media queries */
+
+/* for min width= 480 */
+
+@media screen and (max-width:1200px){
+    nav{
+        position: sticky;
+        width: 100%;
+        height: 90px;
+        margin-bottom: 5px;
+        top: 0;
+    }
+
+    .nav-items{
+        list-style-type: none;
+        margin-top: 10px;
+    }
+
+
+    .catch-phrase ul>li{
+        display: inline;
+        padding-right: 30px;
+        padding-left: 30px;
+        color: rgb(141, 141, 141);
+        font-size: 40px;
+        font-weight: bold;
+    }
+
+    .all-content{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .main-content, .main-content-two{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .card-container{
+        display: none;
+        background-color: rgb(228, 228, 228);
+        text-align: center;
+    
+    }
+
+    .nav-list{
+        display: flex;
+        flex-direction: row;
+        padding-left: 0;
+    }
+
+    .side-nav{
+        border-radius: 0;
+    }
+
+    .container, footer, .content-hr{
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .figma-img{
+        width: 8%;
+    }
+
+    .about-icon{
+        width: 80%;
+    }
+    
+    .home-icon{
+        width: 8%;
+    }
+
+    .third{
+        display: flex;
+        flex-direction: column;
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
+    .project-pic img{
+        height: 100%;
+        margin-top: 10px;
+        padding-bottom: 100px;
+    }
+
+    .projects-card{
+        background-color: white;
+        height: max-content;
+        margin-bottom: 20px;
+        box-shadow: 0 0 10px grey;
+        border-radius: 5px;
+    }
+
+    .figma-project-heading{
+        text-align: center;
+        font-size: 50px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        margin: 0;
+    }
+
+    .project-pic{
+        height: max-content;
+        border-bottom: 2px solid rgb(189, 189, 189);
+    }
+
+    .profile-details-holder{
+        display: flex;
+        flex-direction: column;
+        background-color: white;
+        margin: 20px;
+        padding: 0;
+        border-radius: 5px;
+    }
+
+    .profile-holder{
+        text-align: center;
+    }
+
+    .profile-holder{
+        text-align: center;
+        margin: 0;
+        border-right: 0;
+    }
+
+    .profile-pic img{
+        width: 50%;
+        height: 50%;
+        border-radius: 50%;
+        border: 4px solid rgb(235, 235, 235);
+    }
+
+    .about-me-descriptions{
+        text-align: center;
+        margin-top: 0;
+        width: inherit;
+        padding: 20px 40px;
+        border-top: 2px solid rgb(196, 196, 196);
+    }
+
+    .about-me ul>li{
+        list-style-type: none;
+    }
+
+    .work-experience{
+        margin-inline-end: 0px;
+        padding-inline-start: 0px;
+        margin: 0;
+        padding: 0;
+    }
+
+    .user-career{
+        font-size: 40px;
+        font-weight: bold;
+        margin-top: 15px;
+        margin-bottom: 30px;
+        color: rgb(141, 141, 141);
+    }
+
+    .icon-contact{
+        text-align: center;
+        width: 10%;
+        padding: 8px;
+    
+    }
+}
+
+/* screens from 1200px */
+
+@media screen and (max-width:1200px){
+    .card-container{
+        display: none;
+        background-color: rgb(228, 228, 228);
+        text-align: center;
+    
+    }
 }
 
 
