--- a/index.css
+++ b/index.css
@@ -214,7 +214,7 @@ nav{
     
 }
 
-.fig-des{
+.small-des{
     font-size: 10px;
     color: rgb(141, 141, 141);
     margin-bottom: 10px;
@@ -233,10 +233,13 @@ nav{
 }
 
 .icon-contact{
-    text-align: center;
-    width: 10%;
-    padding: 10px;
+    width: 15%;
+    padding-left: 20px;
+    padding-right: 20px;
+}
 
+.contact-icons{
+    text-align: left;
 }
 
 
@@ -245,10 +248,6 @@ nav{
     flex-direction: column;
 }
 
-
-.icon-links{
-    padding-right: 60px;
-}
 
 .icon-contact:hover{
     background-color: khaki;
@@ -367,6 +366,11 @@ nav{
         font-size: 40px;
         font-weight: bold;
     }
+
+    .content-holder{
+        margin-left: 0px;
+    }
+    
 
     .all-content{
         display: flex;
@@ -501,21 +505,95 @@ nav{
 
     .icon-contact{
         text-align: center;
-        width: 10%;
-        padding: 8px;
+        width: 12%;
+        padding-left: 20px;
     
     }
+
+    .contact-icons{
+        text-align: center;
+    }
+
 }
 
 /* screens from 1200px */
 
-@media screen and (max-width:1200px){
+@media screen and (max-width:800px){
     .card-container{
         display: none;
         background-color: rgb(228, 228, 228);
         text-align: center;
     
     }
+
+    .content-holder{
+        margin-left: 0px;
+    
+    }
+
+    .icon-links{
+        padding: 0px;
+    }
+
+    .icon-contact{
+        text-align: center;
+        width: 12%;
+        padding-left: 20px;
+    
+    }
+
+    .about-img{
+        width: 10%;
+        padding-bottom: 5px;
+        background-color: rgb(214, 214, 214);
+        border-radius: 5px;
+        opacity: 0.5;
+    }
+
+    .contact-icons{
+        text-align: center;
+    }
+    
+}
+
+/* max width 500px */
+
+@media screen and (max-width:600px){
+    .card-container{
+        display: none;
+        
+    }
+
+    .catch-phrase ul>li{
+        display: inline;
+        padding-right: 20px;
+        padding-left: 20px;
+        color: rgb(141, 141, 141);
+        font-size: 15px;
+        font-weight: bold;
+    }
+
+    .icon-contact{
+        text-align: center;
+        width: 20%;
+        padding-left: 15px;
+    
+    }
+
+    .icon-links{
+        padding-right: 0;
+        padding: 0px;
+    }
+
+    .content-holder{
+        margin-left: 0px;
+    
+    }
+
+    .contact-icons{
+        text-align: center;
+    }
+    
 }
 
 
